CSS: Apply 4 more Stylelint rules (#1769)
Co-authored-by: Will Eastcott <will@playcanvas.com>

--- a/editor-ui/sass/_launch.scss
+++ b/editor-ui/sass/_launch.scss
@@ -86,7 +86,7 @@ canvas:focus {
     right: 0;
     z-index: 100;
     max-height: 40%;
-    background-color: rgba(0, 0, 0, 0.7);
+    background-color: rgba(0, 0, 0, 70%);
     font-size: 14px;
     font-family: inconsolatamedium, Monaco, Menlo, 'Ubuntu Mono', Consolas, source-code-pro, monospace;
     font-weight: normal;
