--- a/editor-ui/sass/editor/_editor-release-notes.scss
+++ b/editor-ui/sass/editor/_editor-release-notes.scss
@@ -12,8 +12,9 @@
         color: $text-primary;
         font-size: 12px;
 
-        &:before {
+        &::before {
             @extend .font-icon;
+
             content: '\E191';
             margin-right: $element-margin;
         }
