--- a/editor-ui/sass/editor/_editor-settings-panel.scss
+++ b/editor-ui/sass/editor/_editor-settings-panel.scss
@@ -1,8 +1,9 @@
 .settings-panel {
     .settings-scope-icon {
-        &:before {
+        &::before {
             content: attr(data-icon);
             @extend .font-icon;
+
             font-weight: 100;
             margin-right: $element-margin;
             vertical-align: middle;
@@ -12,9 +13,10 @@
 }
 
 .settings-scope-tooltip {
-    &:before {
+    &::before {
         content: attr(data-icon);
         @extend .font-icon;
+
         font-weight: 100;
         font-size: inherit;
         margin-right: $element-margin;
