--- a/editor-ui/sass/pcui/_pcui-color-input.scss
+++ b/editor-ui/sass/pcui/_pcui-color-input.scss
@@ -1,6 +1,7 @@
 // color input
 .pcui-color-input {
     @extend .noSelect;
+
     position: relative;
     display: inline-block;
     box-sizing: border-box;
@@ -23,7 +24,7 @@
     // checkerboard pattern
     @include checkerboard(#fff, black, calc(44px / 5));
 
-    &:after {
+    &::after {
         content: '\00a0';
         position: absolute;
         bottom: 0;
@@ -48,7 +49,7 @@
 .pcui-color-input.pcui-readonly {
     cursor: default;
 
-    &:after {
+    &::after {
         display: none;
     }
 }
@@ -65,7 +66,7 @@
     &:focus {
         box-shadow: $element-shadow-hover;
 
-        &:after {
+        &::after {
             border-bottom-color: $bcg-darkest;
         }
     }
