--- a/editor-ui/sass/_code_editor.scss
+++ b/editor-ui/sass/_code_editor.scss
@@ -39,19 +39,14 @@ $editor-function: $editor-variable;
 $editor-invalid-text: white;
 $editor-invalid-bg: #ff3295;
 $editor-invalid-deprecated-bg: #e3a9ff;
-
 $editor-font-family: Monaco, Menlo, Consolas, source-code-pro, monospace;
-
 $save-btn-disabled-bg: #35454a;
 $save-btn-disabled-color: #29363b;
-
 $editor-btn-bg: lighten($save-btn-disabled-color, 5%);
 $editor-btn-bg-hover: lighten($save-btn-disabled-color, 7%);
-
 $top-bar-line-height: 34px;
 $top-bar-border: 1px;
 $top-bar-height: $top-bar-line-height + $top-bar-border;
-
 $muted-green: #27ae60;
 $bright-green: #2ecc71;
 $bg-bright: #5b7073;
@@ -66,6 +61,7 @@ html {
 
 body {
     @extend .font-regular;
+
     min-height: 100%;
     height: 100%;
     overflow: hidden;
@@ -188,6 +184,7 @@ body {
 
         .thin {
             @extend .font-thin;
+
             opacity: 0.9;
         }
     }
@@ -339,6 +336,7 @@ body {
     border-radius: 0;
 
     @extend .font-regular;
+
     font-size: 12px;
     line-height: 1.5;
 
@@ -375,7 +373,7 @@ li.CodeMirror-hint-active {
     margin-left: 10px;
 }
 
-.CodeMirror-Tern-completion:before {
+.CodeMirror-Tern-completion::before {
     left: 0;
     top: 0;
     border-radius: 0;
@@ -410,7 +408,7 @@ li.CodeMirror-hint-active {
 }
 
 .CodeMirror-dialog-top {
-    background-color: rgba(0, 0, 0, 0.9);
+    background-color: rgba(0, 0, 0, 90%);
     border: none;
     top: 0;
     padding: 10px 20px;
