--- a/editor-ui/sass/editor/_editor-component-anim-inspector.scss
+++ b/editor-ui/sass/editor/_editor-component-anim-inspector.scss
@@ -31,11 +31,11 @@
     }
 }
 
-.anim-component-boolean-input-item > .pcui-treeview-item-contents > .pcui-treeview-item-icon:after {
+.anim-component-boolean-input-item > .pcui-treeview-item-contents > .pcui-treeview-item-icon::after {
     display: none;
 }
 
-.anim-component-boolean-input-item.root-item > .pcui-treeview-item-contents:before {
+.anim-component-boolean-input-item.root-item > .pcui-treeview-item-contents::before {
     display: none;
 }
 
@@ -45,7 +45,7 @@
     top: 0;
     width: 32px;
     height: 32px;
-    color: rgba(255, 255, 255, 0.75);
+    color: rgba(255, 255, 255, 75%);
     background-color: $bcg-dark;
     border: none;
     margin: 0;
@@ -66,7 +66,7 @@
     margin-top: 0;
 }
 
-.anim-component-mask-inspector-close-button[data-icon]:before {
+.anim-component-mask-inspector-close-button[data-icon]::before {
     font-size: 28px;
     position: absolute;
     left: 2px;
